# Wordle_Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Strategies.h  WordleSolver.h
src/: main.cpp
